<resources>
    <string name="app_name">Footwork</string>
    <string name="reps_mode">Reps Mode</string>
    <string name="time_mode">Time Mode</string>

    <string name="reps_mode_settings">Reps Mode Settings</string>
    <string name="time_mode_settings">Time Mode Settings</string>
    <string name="time_sets_label">Sets</string>
    <string name="reps_label">Reps</string>
    <string name="reps_start">Start</string>
    <string name="reps_ready">Ready</string>
    <string name="break_time">Break Time</string>
    <string name="setsText">Sets</string>
    <string name="countdown">Countdown</string>
    <string name="time_break_label">Break Time</string>
    <string name="time_countdown_label">Countdown</string>
    <string name="Time_start">Start</string>
    <string name="timeReady">Ready</string>
    <string name="timeView">00:00:00</string>
    <string name="timeReps">0</string>
    <string name="setTime">Set Time</string>
    <string name="reps_timer">00:00:00</string>
    <string name="reps_down">0</string>
    <string name="drill_mode">Drill Mode</string>
    <string name="punishment_boost">Punishment Boost</string>
    <string name="please_pick_drill">Please pick a drill:</string>
    <string name="please_pick_a_difficulty">Please pick a difficulty:</string>
    <string name="confirm_punish_settings">Confirm</string>
    <string name="punishClear">Clear</string>
    <string name="question_image">question_image</string>

    <string-array name="reps_array">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="break_array">
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>90</item>
    </string-array>
    <string-array name="set_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="start_array">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string-array name="time_sets_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="set_time_array">
        <item>8</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
        <item>135</item>
        <item>150</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
    </string-array>
    <string-array name="time_break_array">
        <item>7</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string-array name="time_start_array">
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <!-- The Drill element details -->
    <!--1.title: Drill name. e.g, Shadow play-->
    <!--2.explanation: How to do the drill, include details, timed or with shuttle stack-->
    <!--3.gif. The file name is the [index].gif. index is the first number from title, e.g, 1.Shadow Play-->
    <!--Would consider moving these element to database-->
    <string-array name="drill_title_array">
        <item>1.Shadow Play (stack)</item>
        <item>2.Full Back Smash</item>
        <item>3.Stationary Smash</item>
        <item>4.Front Play</item>
        <item>5.Low-Gravity Drill (single)</item>
        <item>6.Low-Gravity Drill (double)</item>
        <item>7.Jumps/Lunges</item>
        <item>8.Shadow Play (timed)</item>
        <item>9.Side to Side</item>
        <item>10.Speed Step 1</item>
        <item>11.Speed Step 2</item>
        <item>12.Speed Step 3</item>
        <item>13.Speed Step 4</item>
    </string-array>
    <string-array name="drill_explanation_array">
        <item>Shadow Play with shuttle stack (stack)</item>
        <item>Full Back Smash with shuttle stack (stack)</item>
        <item>Stationary Smash with shuttle stack (stack)</item>
        <item>Front Play with shuttle stack (stack)</item>
        <item>Low-Gravity Drill: Back-to-Front (Singles)</item>
        <item>Low-Gravity Drill: Back area (Doubles)</item>
        <item>Jumps/Lunges: Jump over obstacle (timed)</item>
        <item>Shadow Play with shuttle stack (timed)</item>
        <item>Side to Side: high and low stroke (timed)</item>
        <item>Speed step: Jumping jack (timed)</item>
        <item>Speed step: side to side hop (double/single leg) (timed)</item>
        <item>Speed step: forward backward hop (double/single leg) (timed)</item>
        <item>Speed step: skater hop (one-way/round-trip) (timed)</item>
    </string-array>

    <!-- The difficulty element details -->
    <string-array name="difficulty_title_array">
        <item>90 sec  / 2 stacks</item>
        <item>120 sec / 3 stacks</item>
        <item>150 sec / 4 stacks</item>
        <item>180 sec / 5 stacks</item>
        <item>240 sec / 6 stacks</item>
    </string-array>

    <!--Strings imported from face tracker-->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="drill_details">TextView</string>
    <string name="faceTimer">00:00</string>
    <string name="direction">Directions</string>

    <!--Strings in drills settings-->
    <string name="courtImage">court image</string>
    <string name="front_high">Front High</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="l_front_high">Front High</string>
    <string name="l_middle_high">Middle High</string>
    <string name="l_middle_low">Middle Low</string>
    <string name="l_back_high">Back High</string>
    <string name="l_back_low">Back Low</string>
    <string name="l_front_low">Front Low</string>
    <string name="r_back_low">Back Low</string>
    <string name="r_back_high">Back High</string>
    <string name="r_middle_low">Middle Low</string>
    <string name="r_front_low">Front Low</string>
    <string name="r_middle_high">Middle High</string>
    <string name="r_front_high">Front High</string>
    <string name="drill_start">Start</string>
    <string name="drillsList">Drills:</string>
    <string name="randomDrill">Random</string>

    <!--Drill settings page string-->
    <string name="drills_colon">Drills: %s</string>
    <string name="direction_in_image">direction</string>
    <string name="drill_count">0</string>
    <string name="drill_countdown">Ready?</string>
    <string name="face_height">Face Height:</string>
    <string name="face_size">Face Size:</string>

</resources>
