<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/RepsButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/reps_mode"
            android:textSize="36sp" />

        <Button
            android:id="@+id/TimeButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/time_mode"
            android:textSize="36sp" />

        <Button
            android:id="@+id/DrillButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/drill_mode"
            android:textSize="36sp" />

        <Button
            android:id="@+id/PunishButton"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/punishment_boost"
            android:textSize="36sp" />

    </LinearLayout>
</ScrollView>
