<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".PlayTimeActivity">

    <TextView
        android:id="@+id/timeDownView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/timeReady"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timePlayView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/timeView"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/countRepsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/timeReps"
        android:textAlignment="center"
        android:textSize="200sp" />
</LinearLayout>
