<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="blocksDescendants"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".PlayRepsActivity">

    <TextView
        android:id="@+id/RepsReadyTextView"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/reps_ready"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/reps_timer" />

    <TextView
        android:id="@+id/RepsDownView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="200sp"
        android:text="@string/reps_down" />


</LinearLayout>
